Update 180622_[jQuery] 자식제외 클래스의 텍스트 선택하기.md

--- a/jQuery/180622_[jQuery] 자식제외 클래스의 텍스트 선택하기.md
+++ b/jQuery/180622_[jQuery] 자식제외 클래스의 텍스트 선택하기.md
@@ -17,7 +17,7 @@ console.log(text[0]);
 ```
 - 설명
 1. **.html()** 로 선택한 요소안의 내용을 가져온다.
-```
+``` javascript
 var text1 = $('.content').html();
 console.log(text1);
 //결과: 안녕<div class="content-box">하세요<div class="box">반갑</div><div class="box">습니다.</div></div>
